<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/screenID"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#7E7E7E"
        android:gravity="center|end"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenID">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/clearButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/C"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/allClearButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:text="@string/AC"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/plusMinusButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/plusMinus"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/seventhButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/eightButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/ninthButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/divideButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/fourthButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/fifthButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/sixthButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/multiplyButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/firstButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/secondButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/thirdButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/minusButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/zeroButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/dotButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/equalButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/equal"
                android:textSize="22sp"
                app:backgroundTint="@color/orange" />

            <Button
                android:id="@+id/plusButton"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textSize="22sp"
                app:backgroundTint="@color/orange"
                android:layout_marginTop="10dp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>